# i3_manager

./: .gitmodules  CMakeLists.txt
src/: debug_strings.cpp  debug_strings.h  i3_manager.cpp  module.h  module_i3ipc_log.cpp  module_i3ipc_log.h  module_multi_monitor.cpp  module_multi_monitor.h
